sesion5/admin-ene-2023/admin-ene-2023/istio/01-tf/03-dr.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  creationTimestamp: null
  name: notificationservice
  namespace: ns-aforo255
spec:
  host: notificationservice
  subsets:
  - labels:
      version: v1
    name: version-v1
  - labels:
      version: v2
    name: version-v2
